js/js.translator/testData/incremental/invalidation/inlineFunSameLibAddFile/lib1/l1.kt
inline fun apply(block: () -> Unit) = block()
